spacing and div sizes are correctat this stage, going to work on styling buttons

--- a/react-app/src/components/CSS/PostPage.css
+++ b/react-app/src/components/CSS/PostPage.css
@@ -93,6 +93,54 @@
     margin: 1vh 0 1vh 0;
 }
 
+.Likes-Numeric {
+    margin-right: 1.5vw;
+}
+
+.Comment-Button{
+    border:none;
+    background-color: rgb(179, 179, 179);
+    width:7vw;
+    height: 100%;
+}
+
+.Like-Button{
+   background-color: rgb(179, 179, 179);
+   border: none; 
+   width: 7vw;
+   height: 100%;
+    
+}
+
+.LikeButtonImage{
+    width: 0.85vw;
+    height: 1vh;
+    margin-right: 0.3vw
+}
+
+.LikeButtonText{
+    font-size: 1em;
+}
+
+.postDeleteBtn {
+    height: 100%;
+    border: none;
+    background-color:rgb(179, 179, 179);
+    border-radius: 3px;
+    cursor: pointer;
+
+}
+.postEditBtn {
+    height: 100%;
+    margin: 0px 0px 0px 10px;
+    border: none;
+    background-color:rgb(179, 179, 179);
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+
+
 .See-More-Container{
     display: flex;
     justify-content: center;
@@ -191,33 +239,14 @@
     border-bottom: 0.5px solid black;
 }
 
-.postDeleteBtn {
-    margin: 0px 0px 0px 10px;
-    border: 1px solid black;
-    background-color:rgb(179, 179, 179);
-    border-radius: 3px;
-    box-shadow: 2px 2px 3px black;
-    cursor: pointer;
-
-}
-.postEditBtn {
-    height: 100%;
-    margin: 0px 0px 0px 10px;
-    border: 1px solid black;
-    background-color:rgb(179, 179, 179);
-    border-radius: 3px;
-    box-shadow: 2px 2px 3px black;
-    cursor: pointer;
-}
-
-.delBtn {
+/* .delBtn {
     height:100%;
-    border: 1px solid black;
+    border: none;
     background-color:rgb(179, 179, 179);
     border-radius: 3px;
-    box-shadow: 2px 2px 3px black;
+    box-shadow: 0.5px 0.5px 50px black;
     cursor: pointer;
-}
+} */
 
 .PostButtonsForAdmin{
     display:flex;
@@ -232,26 +261,3 @@
     margin-bottom: 5px;
 }
 
-.Comment-Button{
-    border:none;
-    background-color: rgb(179, 179, 179);
-    width:7vw;
-    height: 100%;
-}
-
-.Like-Button{
-   background-color: rgb(179, 179, 179);
-   border: none; 
-   width: 7vw;
-   height: 100%;
-    
-}
-
-.LikeButtonImage{
-    width: 1vw;
-    height: 1vh
-}
-
-.LikeButtonText{
-    font-size: 1em;
-    }
